# factory-order-system

./: .gitignore  README.md  app.py  auth.py  config.py  migrate_add_order_fields.py  migrate_add_sales_fields.py  models.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  改动说明.md
routes/: admin.py  order.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  admin.html  admin_orders.html  base.html  change_password.html  create_order.html  dashboard.html  login.html  order_detail.html  order_list.html  order_overview.html  order_preview.html  payment_records.html  user_list.html
