[project]
name = "factory-order-system"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "Flask-Login==0.6.3",
    "Flask-SQLAlchemy==3.1.1",
    "Werkzeug==3.0.1",
    "qrcode==7.4.2",
    "Pillow==10.1.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
